[package]
name = "place_cache_rust_server"
version = "0.1.0"
edition = "2021"


[dependencies]

# async
tokio = { version = "1", features = ["full"] }

# database
rocksdb = "0"

# server
tokio-tungstenite = "0"

# utils
anyhow = "1"
futures = "0"
futures-util = "0"
log = "0"
log4rs = "1"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
